# BitmapSizeOptimize

./: README.md  local.properties
app/: CMakeLists.txt  build.gradle  proguard-rules.pro
app/src/androidTest/java/com/moonsky/bitmapsizeoptimize/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-jpeg.cpp
app/src/main/java/com/moonsky/bitmapsizeoptimize/: BitmapUtils.java  Constant.java  MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/moonsky/bitmapsizeoptimize/: ExampleUnitTest.java
